; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_DrawSaveLoadBorder.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_DrawSaveLoadBorder.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"M_LSLEFT\00", align 1
@PU_CACHE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"M_LSCNTR\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"M_LSRGHT\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_DrawSaveLoadBorder(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = sub nsw i32 %6, 8
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %8, 7
  %10 = load i32, i32* @PU_CACHE, align 4
  %11 = call i32 @W_CacheLumpName(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = call i32 @V_DrawPatchDirect(i32 %7, i32 %9, i32 0, i32 %11)
  store i32 0, i32* %5, align 4
  br label %13

13:                                               ; preds = %25, %2
  %14 = load i32, i32* %5, align 4
  %15 = icmp slt i32 %14, 24
  br i1 %15, label %16, label %28

16:                                               ; preds = %13
  %17 = load i32, i32* %3, align 4
  %18 = load i32, i32* %4, align 4
  %19 = add nsw i32 %18, 7
  %20 = load i32, i32* @PU_CACHE, align 4
  %21 = call i32 @W_CacheLumpName(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32 %20)
  %22 = call i32 @V_DrawPatchDirect(i32 %17, i32 %19, i32 0, i32 %21)
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, 8
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %16
  %26 = load i32, i32* %5, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %5, align 4
  br label %13

28:                                               ; preds = %13
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* %4, align 4
  %31 = add nsw i32 %30, 7
  %32 = load i32, i32* @PU_CACHE, align 4
  %33 = call i32 @W_CacheLumpName(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i32 %32)
  %34 = call i32 @V_DrawPatchDirect(i32 %29, i32 %31, i32 0, i32 %33)
  ret void
}

declare dso_local i32 @V_DrawPatchDirect(i32, i32, i32, i32) #1

declare dso_local i32 @W_CacheLumpName(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
